--- a/ImageSegmentation/ImageSegmentation/ImageSegmentation.csproj
+++ b/ImageSegmentation/ImageSegmentation/ImageSegmentation.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ImageTemplate</RootNamespace>
     <AssemblyName>ImageTemplate</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DSU.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
