--- a/ImageSegmentation/ImageSegmentation/ImageSegmentation.csproj
+++ b/ImageSegmentation/ImageSegmentation/ImageSegmentation.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ImageOperations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Segmentation.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>MainForm.cs</DependentUpon>
