--- a/ImageSegmentation/ImageSegmentation/app.config
+++ b/ImageSegmentation/ImageSegmentation/app.config
@@ -4,5 +4,6 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
 	<runtime>
 		<legacyCorruptedStateExceptionsPolicy enabled="true" />
+		<gcAllowVeryLargeObjects enabled="true" />
 	</runtime>
 </configuration>
